# librasterlite2

./: CMakeLists.txt  Makefile-static-MinGW  Makefile.am  Makefile.in  config.h.cmake.in  config.h.in  configure  configure.ac  configure.cmake
cmake/: FindCharLS.cmake  FindGEOS.cmake  FindGeoTIFF.cmake  FindIconv.cmake  FindOpenJPEG2.cmake  FindPixman.cmake  FindSPATIALITE.cmake  FindSQLite3.cmake  FindTIFF.cmake  FindWEBP.cmake  project-config.cmake.in
examples/: Makefile.in
headers/: Makefile.am  Makefile.in  rasterlite2_private.h  rl2svg_private.h
headers/rasterlite2/: rasterlite2.h  rl2graphics.h  rl2tiff.h  rl2wms.h
src/: CMakeLists.txt  Makefile.am  Makefile.in  rasterlite2.c  rl2_internal_data.c  rl2ascii.c  rl2auxfont.c  rl2auxgeom.c  rl2auxrender.c  rl2charls.c  rl2codec.c  rl2dbms.c  rl2gif.c  rl2import.c  rl2jpeg.c  rl2md5.c  rl2openjpeg.c  rl2paint.c  rl2png.c  rl2pyramid.c  rl2rastersym.c  rl2raw.c  rl2sql.c  rl2sqlaux.c  rl2svg.c  rl2svgaux.c  rl2svgxml.c  rl2symbaux.c  rl2symbolizer.c  rl2tiff.c  rl2webp.c  rl2wms.c
test/: CMakeLists.txt  Makefile.am  Makefile.in  check_sql_stmt.c  raster_symbolizer_1.xml  raster_symbolizer_2.xml  raster_symbolizer_3.xml  raster_symbolizer_4.xml  raster_symbolizer_5.xml  raster_symbolizer_6.xml  symbolizers.sqlite  test1.c  test10.c  test11.c  test12.c  test13.c  test14.c  test15.c  test16.c  test17.c  test18.c  test19.c  test2.c  test20.c  test3.c  test4.c  test5.c  test6.c  test7.c  test8.c  test9.c  test_coverage.c  test_font.c  test_line_symbolizer.c  test_load_wms.c  test_map_ascii.c  test_map_gray.c  test_map_indiana.c  test_map_infrared.c  test_map_mono.c  (+33 more)
test/map_samples/ascii/: ascii2.asc
test/map_samples/usgs-srtm/: srtm2.tif
test/sql_stmt_security_tests/: Makefile.am  Makefile.in  exportfont1.testcase  exportfont10.testcase  exportfont11.testcase  exportfont12.testcase  exportfont13.testcase  exportfont2.testcase  exportfont3.testcase  exportfont4.testcase  exportfont5.testcase  exportfont6.testcase  exportfont7.testcase  exportfont8.testcase  exportfont9.testcase  loadraster17.testcase  loadraster18.testcase  loadraster19.testcase  loadraster20.testcase  loadrasterdir17.testcase  loadrasterdir18.testcase  loadrasterdir19.testcase  loadrasterdir20.testcase  writebandgeotiff1.testcase  writebandgeotiff10.testcase  writebandgeotiff11.testcase  writebandgeotiff12.testcase  writebandgeotiff13.testcase  writebandgeotiff14.testcase  writebandgeotiff15.testcase  writebandgeotiff16.testcase  writebandgeotiff17.testcase  writebandgeotiff18.testcase  writebandgeotiff19.testcase  writebandgeotiff2.testcase  writebandgeotiff20.testcase  writebandgeotiff21.testcase  writebandgeotiff22.testcase  writebandgeotiff23.testcase  writebandgeotiff24.testcase  (+39 more)
test/sql_stmt_tests/: Makefile.am  Makefile.in  createcov_16_mband.testcase  createcov_16_mband1.testcase  createcov_16_mband_deflate.testcase  createcov_16_mband_deflateno.testcase  createcov_16_mband_fax3.testcase  createcov_16_mband_fax4.testcase  createcov_16_mband_gif.testcase  createcov_16_mband_jpeg.testcase  createcov_16_mband_lzma.testcase  createcov_16_mband_lzmano.testcase  createcov_16_mband_png.testcase  createcov_16_mband_webp1.testcase  createcov_16_mband_webp2.testcase  createcov_1bit_mono.testcase  createcov_1bit_mono1.testcase  createcov_1bit_mono_deflate.testcase  createcov_1bit_mono_deflateno.testcase  createcov_1bit_mono_fax3.testcase  createcov_1bit_mono_fax4.testcase  createcov_1bit_mono_jpeg.testcase  createcov_1bit_mono_lzma.testcase  createcov_1bit_mono_lzmano.testcase  createcov_1bit_mono_png.testcase  createcov_1bit_mono_webp1.testcase  createcov_1bit_mono_webp2.testcase  createcov_1bit_palette.testcase  createcov_1bit_palette1.testcase  createcov_1bit_palette_gif.testcase  createcov_1bit_palette_png.testcase  createcov_2bit_gray.testcase  createcov_2bit_gray1.testcase  createcov_2bit_gray_gif.testcase  createcov_2bit_gray_jpeg.testcase  createcov_2bit_gray_png.testcase  createcov_2bit_gray_webp1.testcase  createcov_2bit_gray_webp2.testcase  createcov_2bit_palette.testcase  createcov_2bit_palette1.testcase  (+193 more)
tools/: CMakeLists.txt  Makefile.am  Makefile.in  rl2sniff.c  rl2tool.c  wmslite.c
