AM_CFLAGS = @LIBPNG_CFLAGS@ @LIBWEBP_CFLAGS@ @LIBLZMA_CFLAGS@ \
	@LIBSPATIALITE_CFLAGS@ @LIBCURL_CFLAGS@ @LIBXML2_CFLAGS@
AM_LDFLAGS = -L../src 

bin_PROGRAMS = rl2tool

AM_CPPFLAGS = @CFLAGS@
AM_CPPFLAGS += -I$(top_srcdir)/headers

rl2tool_SOURCES = rl2tool.c

LDADD = @LIBPNG_LIBS@ @LIBWEBP_LIBS@ @LIBLZMA_LIBS@ \
	@LIBSPATIALITE_LIBS@ @LIBCURL_LIBS@  @LIBXML2_LIBS@ \
	-lrasterlite2 

