
EXTRA_DIST = loadraster1.testcase \
	loadraster2.testcase \
	loadraster3.testcase \
	loadraster4.testcase \
	loadraster5.testcase \
	loadraster6.testcase \
	loadraster7.testcase \
	loadraster8.testcase \
	loadraster9.testcase \
	loadraster10.testcase \
	loadraster11.testcase \
	loadraster12.testcase \
	loadraster13.testcase \
	loadraster14.testcase \
	loadraster15.testcase \
	loadraster16.testcase \
	loadraster17.testcase \
	loadraster18.testcase \
	loadraster19.testcase \
	loadraster20.testcase 



