
EXTRA_DIST = loadraster1.testcase \
	loadraster2.testcase \
	loadraster3.testcase \
	loadraster4.testcase \
	loadraster5.testcase \
	loadraster6.testcase \
	loadraster7.testcase \
	loadraster8.testcase \
	loadraster9.testcase \
	loadraster10.testcase \
	loadraster11.testcase \
	loadraster12.testcase \
	loadraster13.testcase \
	loadraster14.testcase \
	loadraster15.testcase \
	loadraster16.testcase \
	loadraster17.testcase \
	loadraster18.testcase \
	loadraster19.testcase \
	loadraster20.testcase \
	loadrasterdir1.testcase \
	loadrasterdir2.testcase \
	loadrasterdir3.testcase \
	loadrasterdir4.testcase \
	loadrasterdir5.testcase \
	loadrasterdir6.testcase \
	loadrasterdir7.testcase \
	loadrasterdir8.testcase \
	loadrasterdir9.testcase \
	loadrasterdir10.testcase \
	loadrasterdir11.testcase \
	loadrasterdir12.testcase \
	loadrasterdir13.testcase \
	loadrasterdir14.testcase \
	loadrasterdir15.testcase \
	loadrasterdir16.testcase \
	loadrasterdir17.testcase \
	loadrasterdir18.testcase \
	loadrasterdir19.testcase \
	loadrasterdir20.testcase \
	loadrasterdir21.testcase \
	loadrasterdir22.testcase \
	loadrasterdir23.testcase \
	loadrasterdir24.testcase



