
EXTRA_DIST = loadraster1.testcase \
	loadraster2.testcase \
	loadraster3.testcase \
	loadraster4.testcase \
	loadraster5.testcase \
	loadraster6.testcase \
	loadraster7.testcase \
	loadraster8.testcase \
	loadraster9.testcase \
	loadraster10.testcase \
	loadraster11.testcase \
	loadraster12.testcase \
	loadraster13.testcase \
	loadraster14.testcase \
	loadraster15.testcase \
	loadraster16.testcase \
	loadraster17.testcase \
	loadraster18.testcase \
	loadraster19.testcase \
	loadraster20.testcase \
	loadraster21.testcase \
	loadraster22.testcase \
	loadraster23.testcase \
	loadraster24.testcase \
	loadrasterdir1.testcase \
	loadrasterdir2.testcase \
	loadrasterdir3.testcase \
	loadrasterdir4.testcase \
	loadrasterdir5.testcase \
	loadrasterdir6.testcase \
	loadrasterdir7.testcase \
	loadrasterdir8.testcase \
	loadrasterdir9.testcase \
	loadrasterdir10.testcase \
	loadrasterdir11.testcase \
	loadrasterdir12.testcase \
	loadrasterdir13.testcase \
	loadrasterdir14.testcase \
	loadrasterdir15.testcase \
	loadrasterdir16.testcase \
	loadrasterdir17.testcase \
	loadrasterdir18.testcase \
	loadrasterdir19.testcase \
	loadrasterdir20.testcase \
	loadrasterdir21.testcase \
	loadrasterdir22.testcase \
	loadrasterdir23.testcase \
	loadrasterdir24.testcase \
	loadrasterdir25.testcase \
	loadrasterdir26.testcase \
	loadrasterdir27.testcase \
	loadrasterdir28.testcase \
	loadrasterwms1.testcase \
	loadrasterwms2.testcase \
	loadrasterwms3.testcase \
	loadrasterwms4.testcase \
	loadrasterwms5.testcase \
	loadrasterwms6.testcase \
	loadrasterwms7.testcase \
	loadrasterwms8.testcase \
	loadrasterwms9.testcase \
	loadrasterwms10.testcase \
	loadrasterwms11.testcase \
	loadrasterwms12.testcase \
	loadrasterwms13.testcase \
	loadrasterwms14.testcase \
	loadrasterwms15.testcase \
	loadrasterwms16.testcase \
	loadrasterwms17.testcase \
	loadrasterwms18.testcase \
	loadrasterwms19.testcase \
	writeascii1.testcase \
	writeascii2.testcase \
	writeascii3.testcase \
	writeascii4.testcase \
	writeascii5.testcase \
	writeascii6.testcase \
	writeascii7.testcase \
	writeascii9.testcase \
	writeascii10.testcase \
	writeascii11.testcase \
	writeascii12.testcase \
	writeascii13.testcase \
	writeascii14.testcase \
	writeascii15.testcase \
	writeascii16.testcase \
	writegeotiff1.testcase \
	writegeotiff2.testcase \
	writegeotiff3.testcase \
	writegeotiff4.testcase \
	writegeotiff5.testcase \
	writegeotiff6.testcase \
	writegeotiff7.testcase \
	writegeotiff8.testcase \
	writegeotiff9.testcase \
	writegeotiff10.testcase \
	writegeotiff11.testcase \
	writegeotiff12.testcase \
	writegeotiff13.testcase \
	writegeotiff14.testcase \
	writegeotiff15.testcase \
	writegeotiff16.testcase \
	writegeotiff17.testcase \
	writegeotiff18.testcase \
	writegeotiff19.testcase \
	writetiff1.testcase \
	writetiff2.testcase \
	writetiff3.testcase \
	writetiff4.testcase \
	writetiff5.testcase \
	writetiff6.testcase \
	writetiff7.testcase \
	writetiff8.testcase \
	writetiff9.testcase \
	writetiff10.testcase \
	writetiff11.testcase \
	writetiff12.testcase \
	writetiff13.testcase \
	writetiff14.testcase \
	writetiff15.testcase \
	writetiff16.testcase \
	writetiff17.testcase \
	writetiff18.testcase



