
EXTRA_DIST = createcov_16_mband1.testcase \
	createcov_16_mband_deflate.testcase \
	createcov_16_mband_fax3.testcase \
	createcov_16_mband_fax4.testcase \
	createcov_16_mband_gif.testcase \
	createcov_16_mband_jpeg.testcase \
	createcov_16_mband_lzma.testcase \
	createcov_16_mband_png.testcase \
	createcov_16_mband.testcase \
	createcov_16_mband_webp1.testcase \
	createcov_16_mband_webp2.testcase \
	createcov_1bit_mono1.testcase \
	createcov_1bit_mono_deflate.testcase \
	createcov_1bit_mono_fax3.testcase \
	createcov_1bit_mono_fax4.testcase \
	createcov_1bit_mono_gif.testcase \
	createcov_1bit_mono_jpeg.testcase \
	createcov_1bit_mono_lzma.testcase \
	createcov_1bit_mono_png.testcase \
	createcov_1bit_mono.testcase \
	createcov_1bit_mono_webp1.testcase \
	createcov_1bit_mono_webp2.testcase \
	createcov_1bit_palette1.testcase \
	createcov_1bit_palette_gif.testcase \
	createcov_1bit_palette_png.testcase \
	createcov_1bit_palette.testcase \
	createcov_2bit_gray1.testcase \
	createcov_2bit_gray_gif.testcase \
	createcov_2bit_gray_jpeg.testcase \
	createcov_2bit_gray_png.testcase \
	createcov_2bit_gray.testcase \
	createcov_2bit_gray_webp1.testcase \
	createcov_2bit_gray_webp2.testcase \
	createcov_2bit_palette1.testcase \
	createcov_2bit_palette_gif.testcase \
	createcov_2bit_palette_png.testcase \
	createcov_2bit_palette.testcase \
	createcov_4bit_gray1.testcase \
	createcov_4bit_gray_gif.testcase \
	createcov_4bit_gray_jpeg.testcase \
	createcov_4bit_gray_png.testcase \
	createcov_4bit_gray.testcase \
	createcov_4bit_gray_webp1.testcase \
	createcov_4bit_gray_webp2.testcase \
	createcov_4bit_palette1.testcase \
	createcov_4bit_palette_gif.testcase \
	createcov_4bit_palette_png.testcase \
	createcov_4bit_palette.testcase \
	createcov_8_mband1.testcase \
	createcov_8_mband_deflate.testcase \
	createcov_8_mband_fax3.testcase \
	createcov_8_mband_fax4.testcase \
	createcov_8_mband_gif.testcase \
	createcov_8_mband_jpeg.testcase \
	createcov_8_mband_lzma.testcase \
	createcov_8_mband_png.testcase \
	createcov_8_mband.testcase \
	createcov_8_mband_webp1.testcase \
	createcov_8_mband_webp2.testcase \
	createcov_double_grid1.testcase \
	createcov_double_grid_deflate.testcase \
	createcov_double_grid_lzma.testcase \
	createcov_double_grid.testcase \
	createcov_err1.testcase \
	createcov_err2.testcase \
	createcov_err3.testcase \
	createcov_err4.testcase \
	createcov_err5.testcase \
	createcov_err6.testcase \
	createcov_err7.testcase \
	createcov_err8.testcase \
	createcov_err9.testcase \
	createcov_err10.testcase \
	createcov_err11.testcase \
	createcov_err12.testcase \
	createcov_float_grid1.testcase \
	createcov_float_grid_deflate.testcase \
	createcov_float_grid_lzma.testcase \
	createcov_float_grid.testcase \
	createcov_int16_grid1.testcase \
	createcov_int16_grid_deflate.testcase \
	createcov_int16_grid_lzma.testcase \
	createcov_int16_grid.testcase \
	createcov_int32_grid1.testcase \
	createcov_int32_grid_deflate.testcase \
	createcov_int32_grid_gif.testcase \
	createcov_int32_grid_jpeg.testcase \
	createcov_int32_grid_lzma.testcase \
	createcov_int32_grid_png.testcase \
	createcov_int32_grid.testcase \
	createcov_int32_grid_webp1.testcase \
	createcov_int32_grid_webp2.testcase \
	createcov_int8_grid1.testcase \
	createcov_int8_grid_deflate.testcase \
	createcov_int8_grid_lzma.testcase \
	createcov_int8_grid.testcase \
	createcov_uint16_grid1.testcase \
	createcov_uint16_grid_deflate.testcase \
	createcov_uint16_grid_lzma.testcase \
	createcov_uint16_grid.testcase \
	createcov_uint32_grid1.testcase \
	createcov_uint32_grid_deflate.testcase \
	createcov_uint32_grid_lzma.testcase \
	createcov_uint32_grid.testcase \
	createcov_uint8_gray_deflate.testcase \
	createcov_uint8_gray_fax3.testcase \
	createcov_uint8_gray_fax4.testcase \
	createcov_uint8_gray_gif.testcase \
	createcov_uint8_gray_jpeg.testcase \
	createcov_uint8_gray_lzma.testcase \
	createcov_uint8_gray_png.testcase \
	createcov_uint8_gray.testcase \
	createcov_uint8_gray_webp1.testcase \
	createcov_uint8_gray_webp2.testcase \
	createcov_uint8_grid1.testcase \
	createcov_uint8_grid_deflate.testcase \
	createcov_uint8_grid_lzma.testcase \
	createcov_uint8_grid.testcase \
	createcov_uint8_palette_deflate.testcase \
	createcov_uint8_palette_fax3.testcase \
	createcov_uint8_palette_fax4.testcase \
	createcov_uint8_palette_gif.testcase \
	createcov_uint8_palette_jpeg.testcase \
	createcov_uint8_palette_lzma.testcase \
	createcov_uint8_palette_png.testcase \
	createcov_uint8_palette.testcase \
	createcov_uint8_palette_webp1.testcase \
	createcov_uint8_palette_webp2.testcase \
	createcov_uint8_rgb1.testcase \
	createcov_uint8_rgb_deflate.testcase \
	createcov_uint8_rgb_fax3.testcase \
	createcov_uint8_rgb_fax4.testcase \
	createcov_uint8_rgb_gif.testcase \
	createcov_uint8_rgb_jpeg.testcase \
	createcov_uint8_rgb_lzma.testcase \
	createcov_uint8_rgb_png.testcase \
	createcov_uint8_rgb.testcase \
	createcov_uint8_rgb_webp1.testcase \
	createcov_uint8_rgb_webp2.testcase \
	createpixel1.testcase \
	createpixel2.testcase \
	createpixel3.testcase \
	createpixel4.testcase \
	createpixel5.testcase \
	createpixel6.testcase \
	createpixel7.testcase \
	createpixel8.testcase \
	createpixel9.testcase \
	createpixel10.testcase \
	createpixel11.testcase \
	createpixel12.testcase \
	getpixelnumbands1.testcase \
	getpixelnumbands2.testcase \
	getpixelnumbands3.testcase \
	getpixelnumbands4.testcase \
	getpixelnumbands5.testcase \
	getpixelnumbands6.testcase \
	getpixeltype1.testcase \
	getpixeltype2.testcase \
	getpixeltype3.testcase \
	getpixeltype4.testcase \
	getpixeltype5.testcase \
	getpixeltype6.testcase \
	getpixeltype7.testcase \
	getpixeltype8.testcase \
	getpixeltype9.testcase \
	getpixeltype10.testcase \
	getpixeltype11.testcase \
	getpixeltype12.testcase \
	getpixeltype13.testcase \
	getpixeltype14.testcase \
	getpixeltype15.testcase \
	getpixeltype16.testcase \
	getpixelvalue1.testcase \
	getpixelvalue2.testcase \
	getpixelvalue3.testcase \
	getpixelvalue4.testcase \
	getpixelvalue5.testcase \
	getpixelvalue6.testcase \
	getpixelvalue7.testcase \
	getpixelvalue8.testcase \
	getpixelvalue9.testcase \
	getpixelvalue10.testcase \
	getpixelsampletype1.testcase \
	getpixelsampletype2.testcase \
	getpixelsampletype3.testcase \
	getpixelsampletype4.testcase \
	getpixelsampletype5.testcase \
	getpixelsampletype6.testcase \
	getpixelsampletype7.testcase \
	getpixelsampletype8.testcase \
	getpixelsampletype9.testcase \
	getpixelsampletype10.testcase \
	getpixelsampletype11.testcase \
	ispixelopaque1.testcase \
	ispixelopaque2.testcase \
	ispixelopaque3.testcase \
	ispixelopaque4.testcase \
	ispixelopaque5.testcase \
	ispixeltransparent1.testcase \
	ispixeltransparent2.testcase \
	ispixeltransparent3.testcase \
	ispixeltransparent4.testcase \
	ispixeltransparent5.testcase \
	setpixelopaque1.testcase \
	pixelequals1.testcase \
	pixelequals2.testcase \
	pixelequals3.testcase \
	pixelequals4.testcase \
	pixelequals5.testcase \
	pixelequals6.testcase \
	pixelequals7.testcase \
	pixelequals8.testcase \
	setpixelopaque2.testcase \
	setpixeltransparent1.testcase \
	setpixeltransparent2.testcase \
	setpixelvalue1.testcase \
	setpixelvalue2.testcase \
	setpixelvalue3.testcase \
	setpixelvalue4.testcase \
	setpixelvalue5.testcase \
	setpixelvalue6.testcase \
	setpixelvalue7.testcase \
	setpixelvalue8.testcase \
	setpixelvalue9.testcase \
	setpixelvalue10.testcase \
	setpixelvalue11.testcase \
	setpixelvalue12.testcase \
	setpixelvalue13.testcase \
	setpixelvalue14.testcase \
	setpixelvalue15.testcase \
	setpixelvalue16.testcase \
	setpixelvalue17.testcase \
	setpixelvalue18.testcase \
	setpixelvalue19.testcase \
	setpixelvalue20.testcase \
	setpixelvalue21.testcase \
	setpixelvalue22.testcase \
	setpixelvalue23.testcase \
	setpixelvalue24.testcase \
	setpixelvalue25.testcase \
	testpixel_1bit_mono.testcase \
	testpixel_1bit_plt.testcase \
	testpixel_2bit_gray.testcase \
	testpixel_2bit_plt.testcase \
	testpixel_4bit_gray.testcase \
	testpixel_4bit_plt.testcase \
	testpixel_double_grid.testcase \
	testpixel_float_grid.testcase \
	testpixel_int16_grid.testcase \
	testpixel_int32_grid.testcase \
	testpixel_int8_grid.testcase \
	testpixel_uint16_grid.testcase \
	testpixel_uint16_mband.testcase \
	testpixel_uint16_rgb.testcase \
	testpixel_uint32_grid.testcase \
	testpixel_uint8_gray.testcase \
	testpixel_uint8_grid.testcase \
	testpixel_uint8_mband.testcase \
	testpixel_uint8_plt.testcase \
	testpixel_uint8_rgb.testcase \
	version.testcase 
